# Aegies-Height

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md
cpp/: CMakeLists.txt  README.md
cpp/examples/: hello_aegis.cpp
cpp/include/: ff_aegis_sdk.hpp
docs/: GLOSSARY.md  QUICKSTART.md  camera_height_workflow.md  d1_models.md  deployment.md  dog_testing_runbook.md  getting_started.md
examples/: 01_hello_connect.py  02_diagnose.py  03_estop.py  README.md
examples/cookbook/: README.md  context_manager.py  diagnose_report.py  graceful_shutdown.py  multi_robot.py  record_trajectory.py  safety_watchdog.py
examples/d1/: aegis_ethernet_walk_test.py  cmd_vel_no_damping_test.py  presets_and_telemetry.py  raw_zsibot_move.py  raw_zsibot_sequence.py  udp_walk.py
examples/motion/: cmd_vel.py  do_preset.py  stand_damping.py
examples/state/: read_battery.py  watch_status.py
examples/vision/: grid_laser_calibration.py  height_calculator.py
wheels/: ff_sdk-0.1.0a0-cp310-cp310-linux_aarch64.whl  ff_sdk-0.1.0a0-cp310-cp310-linux_x86_64.whl
